# Eco-friendly-weather-app

./: .env.example  .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  weather.py
backend/app/routes/: api.py  weather.py
backend/app/services/: __init__.py  decision_engine.py  weather_service.py
backend/tests/: test_decision_engine.py  test_weather_fallback.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: agri-dashboard.tsx  dashboard-header.tsx  metric-card.tsx
frontend/src/lib/: api-client.ts
