[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weatherai-eco-agri-api"
version = "0.1.0"
description = "FastAPI backend for WeatherAI Eco Agri Dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
